--- a/groups.html
+++ b/groups.html
@@ -82,7 +82,7 @@
     </nav>
     <p></p>
     <div class="container" id = "topDescription">
-      <h1 class="h4 topMessage">Choose one of your existing groups to match with:</h1>
+      <h1 class="h4 topMessage">Choose a group to compare your preferences with:</h1>
     </div>
     <div>
         <p></p>
@@ -114,91 +114,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card groupBox">
-          <img src="./images/full_cinema.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">~ Housemates ~</h5>
-            <p class="card-text">
-              This is a brief description of the users "Housemates" group. Maybe there are some inside jokes here!
-            </p>
-            <button type="button" class="btn matchingButton">Start Matching</button>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card groupBox">
-          <img src="./images/empty_cinema.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Comedy Lovers</h5>
-            <p class="card-text">
-              This is a brief description of the users "Comedy Lovers" group. Maybe there  is a funny quote here.
-            </p>
-            <button type="button" class="btn matchingButton">Start Matching</button>
-          </div>
-        </div>
-      </div>
     </div>
-    <div class="container">
-        <h1 class="display-6"></h1>
-      </div>
-      <div>
-          <p></p>
-      </div>
-      <div class="container">
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-          <div class="col">
-              <div class="card groupBox">
-                <img src="./images/friend_group.jpg" class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <h5 class="card-title">Highschool Friends</h5>
-                  <p class="card-text">
-                    This is a brief description for the user's "Highschool Friends" group - 
-                    this must be a great way to stay in touch.
-                  </p>
-                  <button type="button" class="btn matchingButton">Start Matching</button>
-                </div>
-              </div>
-            </div>
-        <div class="col">
-          <div class="card groupBox">
-            <img src="./images/projector.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Documentary Squad</h5>
-              <p class="card-text">
-                  This is a brief description of the users "Documentary Squad" group! It could include 
-                  some information about the group members.  
-              </p>
-              <button type="button" class="btn matchingButton">Start Matching</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card groupBox">
-            <img src="./images/projector.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">A Slightly Older Group</h5>
-              <p class="card-text">
-                This is a group the user hasn't used in a while - they will be sorted 
-                    based on recency of use.
-              </p>
-              <button type="button" class="btn matchingButton">Start Matching</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card groupBox">
-            <img src="./images/full_cinema.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Family :)</h5>
-              <p class="card-text">
-                This is a brief description of the users "Family" group. Maybe there is a favourite movie quote here..
-              </p>
-              <button type="button" class="btn matchingButton">Start Matching</button>
-            </div>
-          </div>
-        </div>
-      </div>
     <!----------------------------------------------->
     <!-- JS: Boostrap, Firebase, API related    -->
     <!----------------------------------------------->
