--- a/matches.html
+++ b/matches.html
@@ -162,7 +162,7 @@
             <button type="button" class="btn btn-dark">Group Settings</button>
           </div>
           <div class="col-sm">
-            <button type="button" class="btn btn-dark">Swipe</button>
+            <button type="button" class="btn btn-dark" id="matchesToSwipeButton">Swipe</button>
           </div>
           <div class="col-sm" id="active_page">
             <button type="button" class="btn btn-dark">Matches</button>
@@ -246,6 +246,8 @@
     <!--------------------------------------------------------------------->
     <!-- JS files: Your own JavaScript functions included here    -->
     <!--------------------------------------------------------------------->
+
+    <script src="scripts/matchesFunctions.js"></script>
 
 </body>
 
