--- a/swipe • collection.html
+++ b/swipe • collection.html
@@ -154,7 +154,7 @@
             <button type="button" class="btn btn-dark">Swipe</button>
           </div>
           <div class="col-sm">
-            <button type="button" class="btn btn-dark">Matches</button>
+            <button type="button" class="btn btn-dark" id="swipeToMatchesButton">Matches</button>
           </div>
         </div>
       </div>
@@ -184,10 +184,10 @@
     <div class="container" id="bottom_grid">
       <div class="row">
         <div class="col-sm" id="nowatch">
-          <button type="button" class="btn btn-danger">I don't want to watch this...</button>
+          <button type="button" class="btn btn-danger" id="noButton">I don't want to watch this...</button>
         </div>
         <div class="col-sm" id="yeswatch">
-          <button type="button" class="btn btn-success">I want to watch this!</button>
+          <button type="button" class="btn btn-success" id="yesButton">I want to watch this!</button>
         </div>
       </div>
     </div>
@@ -219,6 +219,8 @@
     <!--------------------------------------------------------------------->
     <!-- JS files: Your own JavaScript functions included here    -->
     <!--------------------------------------------------------------------->
+
+    <script src="scripts/swipeFunctions.js"></script>
 
 </body>
 
