Add JS for adding current_group attribute to user in groups.html

--- a/createGroupV2.html
+++ b/createGroupV2.html
@@ -73,7 +73,7 @@
             <option selected>Choose a Group Photo..</option>
             <option value="empty_cinema">Theatre</option>
             <option value="friend_group">Sunset</option>
-            <option value="projector">Camera</option>
+            <option value="projector">Projector</option>
           </select>
         </div>
         <input id="makeGroupPublic" type="checkbox" />
