added images to movies

--- a/swipe • collection.html
+++ b/swipe • collection.html
@@ -165,15 +165,14 @@
 
         <div class="card-group">
           <div class="card">
-            <img src="./images/bladerunner.jpg" class="card-img-top" alt="...">
+            <img src="./images/bladerunner.jpg" class="card-img-top" id="displayed-movie-image" alt="...">
 
 
             <div class="card-body">
               <h3 id="displayed-movie-small">TITLE</h3>
               <h4 id="displayed-director">DIRECTOR</h4>
               <h4 id="displayed-year">YEAR</h4>
-              <h5 id="displayed-description">DESCRIPTION</h5>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted" id="displayed-description"></small></p>
             </div>
           </div>
         </div>
