changed group menu

--- a/swipe • collection.html
+++ b/swipe • collection.html
@@ -66,10 +66,12 @@
 
         #nowatch {
             background-color: lightcoral;
+            width: 50%;
         }
 
         #yeswatch {
             background-color: lightgreen;
+            width: 50%;
         }
         
         .col-sm {
@@ -128,7 +130,7 @@
                 <a class="nav-link" href="./matches.html">Matches</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Groups</a>
+                <a class="nav-link" href="./groups.html">Groups</a>
               </li>
             </ul>
           </div>
@@ -138,7 +140,7 @@
       <div class="container" id="group_title">
         <div class="row">
           <div class="col-sm">
-            <h1 class="display-6"><b>THE BOYS</b></h1>
+            <h1 class="display-6" id="displayed-group-title"><b></b></h1>
           </div>
         </div>
       </div>
