--- a/groups.html
+++ b/groups.html
@@ -48,14 +48,14 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#"
-                >Swiping Page</a
+                >Groups</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Group Settings</a>
+              <a class="nav-link" href="./swipe • collection.html">Swipe</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Matches</a>
+              <a class="nav-link" href="./matches.html">Matches</a>
             </li>
           </ul>
         </div>
