--- a/matches.html
+++ b/matches.html
@@ -153,7 +153,7 @@
                 <a class="nav-link" href="./swipe • collection.html">Swipe</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Groups</a>
+                <a class="nav-link" aria-current="page" href="./groups.html">Groups</a>
               </li>
             </ul>
           </div>
