--- a/matches.html
+++ b/matches.html
@@ -164,42 +164,16 @@
       <div class="container" id="group_title">
         <div class="row">
           <div class="col-sm">
-            <h1 class="display-6"><b>THE BOYS</b></h1>
+            <h1 class="display-6" id="displayed-group-title"><b></b></h1>
           </div>
         </div>
       </div>
-
-      <!-- <div class="container" id="top_grid">
-        <div class="row">
-          <div class="col-sm">
-            <button type="button" class="btn btn-dark">Group Settings</button>
-          </div>
-          <div class="col-sm">
-            <button type="button" class="btn btn-dark" id="matchesToSwipeButton">Swipe</button>
-          </div>
-          <div class="col-sm" id="active_page">
-            <button type="button" class="btn btn-dark">Matches</button>
-          </div>
-        </div>
-      </div> -->
-
-    
 
     <div class="container" id="body_container">
     
       <div class="container" id="matches_container">
         <div class="row align-items-center">
-          <!-- <div class="match_col">
-            <aside class="match_image">
-              <img src="./images/bladerunner.jpg">
-            </aside>
-            <div class="match_text">
-              <h2>Bladerunner (1982)</h2>
-              <h5>Directed by: Ridley Scott</h5>
-              <h6>Lorem Ipsum.</h6>
-              <button type="button" class="btn btn-dark">More info.</button>
-            </div>
-          </div> -->
+          <!-- TO BE FILLED BY JAVASCRIPT -->
         </div>
       </div>
     </div>
