--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
                     //------------------------------------------------------------------------------------------
                     var user = authResult.user;
                     if (authResult.additionalUserInfo.isNewUser) {         //if new user
-                        db.collection("users").doc(user.uid).set({         //write to firestore
+                        db.collection("usersthree").doc(user.uid).set({         //write to firestore
                             name: user.displayName,                    //"users" collection
                             email: user.email                          //with authenticated user's ID (user.uid)
                         }).then(function () {
                             console.log("New user added to firestore");
-                            window.location.assign("swipe.html");       //re-direct to main.html after signup
+                            window.location.assign("profile.html");       //re-direct to main.html after signup
                         })
                             .catch(function (error) {
                                 console.log("Error adding new user: " + error);
@@ -168,7 +168,7 @@
             },
             // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
             signInFlow: 'popup',
-            signInSuccessUrl: 'swipe.html',
+            signInSuccessUrl: 'profile.html',
             signInOptions: [
                 // Leave the lines as is for the providers you want to offer your users.
                 //firebase.auth.GoogleAuthProvider.PROVIDER_ID,
