added logo to main + swipe pages

--- a/swipe • collection.html
+++ b/swipe • collection.html
@@ -169,7 +169,7 @@
 
         <div class="card-group">
           <div class="card">
-            <img src="./images/bladerunner.jpg" class="card-img-top" id="displayed-movie-image" alt="...">
+            <img src="https://firebasestorage.googleapis.com/v0/b/cineder-3be64.appspot.com/o/cineder_logos%2FCINEDERLOGO.png?alt=media&token=760463d5-9d4f-4a20-8e19-a29c3427dbe6" class="card-img-top" id="displayed-movie-image" alt="...">
             <div class="card-body">
               <h3 id="displayed-movie-small">Welcome to Cineder :)</h3>
               <button class="btn btn-warning" id="startButton" onclick="startSwipe()">Click here to start swiping!</button>
