added current group to titles

--- a/swipe • collection.html
+++ b/swipe • collection.html
@@ -144,6 +144,7 @@
       <div class="container" id="group_title">
         <div class="row">
           <div class="col-sm">
+            <h5>Current Group:</h5>
             <h1 class="display-6" id="displayed-group-title"><b></b></h1>
           </div>
         </div>
