--- a/groups.html
+++ b/groups.html
@@ -63,18 +63,19 @@
     </nav>
     <p></p>
     <div class="container" id = "topDescription">
-      <h1 class="h4 topMessage">Choose a group to compare your preferences with:</h1>
+      <h3 class="h3 topMessage">Select a Group to Match With or Create a New Group to Join</h3>
     </div>
 
     <div>
         <p></p>
     </div>
 
+    <div class = "text-center">
+      <button type="button" class="btn btn-outline-warning" id="createGroupButton">Create a New Group</button>
+    </div>
+
     <div id = "groupCardDiv">
 
-    </div>
-    <div id = "createButtonDiv">
-      <button href="groups.html" type="button" class="btn btn-secondary" id="createGroup">Create Group!</button>
     </div>
 
     <!-- <div id = "createGroupDiv">
@@ -217,8 +218,8 @@
         setTimeout(applyListeners, 2000);
     
 
-        document.getElementById(id = "matchesToSwipeButton").onclick = function () {
-        location.href = "./swipe • collection.html";
+        document.getElementById(id = "createGroupButton").onclick = function () {
+        location.href = "./createGroupV2.html";
         };
       </script>
     </body>
