--- a/edit_genre.html
+++ b/edit_genre.html
@@ -8,23 +8,35 @@
     <title>Document</title>
 </head>
 
-<div class="container" style = "color:whitesmoke">
-    <div class="row">
-      <div class="col-sm">
-        <h5 class="mb-0">Edit Profile</h5>
-<body style="background-color: #333333;"></body>
+<body style="background-color: #333333; color: whitesmoke"></body>
 <div class="container">
-    <label> User Name </label>
-    <input id="userName" type="text">
+    <h5 class="mb-0">Edit Favorite Genre</h5>
+    <input id="anime" type="checkbox">
+    <label class="form-check-label"> Anime </label>
     <br>
-    <label> About me </label>
-    <input id="aboutMe" type="text">
+    <input id="action" type="checkbox">
+    <label class="form-check-label"> Action </label>
     <br>
-    <label> Country </label>
-    <input id="country" type="text">
+    <input id="comedy" type="checkbox">
+    <label class="form-check-label"> Comedy </label>
     <br>
-    <label> City </label>
-    <input id="city" type="text">
+    <input id="drama" type="checkbox">
+    <label class="form-check-label"> Drama </label>
+    <br>
+    <input id="documentary" type="checkbox">
+    <label class="form-check-label"> Documentary </label>
+    <br>
+    <input id="horror" type="checkbox">
+    <label class="form-check-label"> Horror </label>
+    <br>
+    <input id="mystery" type="checkbox">
+    <label class="form-check-label"> Mystery </label>
+    <br>
+    <input id="romance" type="checkbox">
+    <label class="form-check-label"> Romance </label>
+    <br>
+    <input id="scienceFiction" type="checkbox">
+    <label class="form-check-label"> Science Fiction </label>
     <br>
     <br>
     <button type="button" id="save" class="btn btn-outline-success">Save</button>
@@ -56,7 +68,7 @@
 <!-- JS files: Your own JavaScript functions included here    -->
 <!--------------------------------------------------------------------->
 
-<script src="/scripts/edit_profile.js"></script>
+<script src="/scripts/edit_streming.js"></script>
 </body>
 
 </html>
