--- a/profile.html
+++ b/profile.html
@@ -51,61 +51,46 @@
                     <h4 class="mt-0 mb-0">Amme1234</h4>
                     <p class="small mb-4"> <i class="fa fa-map-marker mr-2"></i>Vancouver</p>
                     <p> No movie, No life</p>
-                    <button type="button" id="changeProfile" class="btn matchingButton">Edit profile</button>
+                    <a href="edit_profile.html" class = "btn bg-sm bg-warning">Edit profile</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="card-dec text-center"></div>
-    <div class="container d-flex align-items-center justify-content-between mb-3"></div>
-    <h5 class="mb-0">Streaming Service</h5>
-    <div class="row card1">
-        <div class="card groupBox" style="width: 18rem;">
-            <img class="card-img-top movieimg" src="./images/netflix.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Net Flix</h5>
-                <a href="#" class="btn matchingButton">Edit Streaming Service</a>
-            </div>
-        </div>
-        <div class="card groupBox" style="width: 18rem;">
-            <img class="card-img-top movieimg" src="./images/primevideo.jpeg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title mo">Prime Video</h5>
-            </div>
-        </div>
-    </div>
-    </div>
-    </div>
-    <div class="card-deck card2">
-        <div class="container d-flex justify-content-between mb-4"></div>
-        <h5 class="mb-0">Favorite Genre</h5>
+    <div class="container" style = "color:whitesmoke">
         <div class="row">
-            <div class="card groupBox card3" style="width: 18rem; height: 25rem">
-                <p>Favorite Genre</p>
-                <img class="card-img-top movieimg" src="./images/anime.jpeg" alt="Card image cap">
-                <div class="card-body">
-
-                    <h5 class="card-title">Anime</h5>
-                    <a href="#" class="btn matchingButton">Edit Favorite Genre</a>
-                </div>
-            </div>
-            <div class="card groupBox" style="width: 19rem; height: 25rem">
-                <p>Favorite Genre</p>
-                <img class="card-img-top movieimg" src="./images/romance.jpeg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Romance</h5>
-                </div>
-            </div>
-            <div class="card groupBox" style="width: 19rem; height: 25em">
-                <p>Favorite Genre</p>
-                <img class="card-img-top movieimg" src="./images/mystery.jpeg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Mystery</h5>
-                </div>
-            </div>
+          <div class="col-sm">
+            <h5 class="mb-0">Streaming Service</h5>
+            <br>
+            <p>Amazon Prime</p>
+            <img class="movieimg" src="./images/primevideo.jpeg" alt="Card image cap">
+            <br>
+            <br>
+            <p>Net Flix</p>
+            <img class="movieimg" src="./images/netflix.png" alt="Card image cap">
+            <br>
+            <br>
+            <a href="edit_streaming.html" class = "btn bg-sm bg-warning">Edit Streaming Service</a>
+            <br>
+            <br>
+          </div>
+          <div class="col-sm">
+            <h5 class="mb-0">Favorite Genre</h5>
+            <br>
+            <p>Romance</p>
+            <img class="movieimg" src="./images/romance.jpeg" alt="Card image cap">
+            <br>
+            <br>
+            <p>Mystery</p>
+            <img class="movieimg" src="./images/mystery.jpeg" alt="Card image cap">
+            <br>
+            <br>
+            <a href="edit_genre.html" class = "btn bg-sm bg-warning">Edit Favorite Genre</a>
+          </div>
         </div>
+      </div>
     </div>
+    
 
     <footer>
     </footer>
