--- a/edit_streaming.html
+++ b/edit_streaming.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
-<div class="container" style = "color:whitesmoke">
-    <div class="row">
-      <div class="col-sm">
-        <h5 class="mb-0">Edit Profile</h5>
-<body style="background-color: #333333;"></body>
+<body style="background-color: #333333; color: whitesmoke"></body>
 <div class="container">
-    <label> User Name </label>
-    <input id="userName" type="text">
-    <br>
-    <label> About me </label>
-    <input id="aboutMe" type="text">
-    <br>
-    <label> Country </label>
-    <input id="country" type="text">
-    <br>
-    <label> City </label>
-    <input id="city" type="text">
-    <br>
-    <br>
+    <h5 class="mb-0">Edit Streaming Service</h5>
+    <input id="amazon" type="checkbox">
+    <label class="form-check-label"> Amazon Prime </label>
+     <br>
+     <input id="netflix" type="checkbox">
+     <label class="form-check-label"> Netflix </label>
+     <br>
+     <input id="disney" type="checkbox">
+     <label class="form-check-label"> Disney+ </label>
+     <br>
+     <input id="hulu" type="checkbox">
+     <label class="form-check-label"> Hulu </label>
+     <br>
+     <br>
     <button type="button" id="save" class="btn btn-outline-success">Save</button>
 </div>
 <!----------------------------------------------->
@@ -56,7 +51,6 @@
 <!-- JS files: Your own JavaScript functions included here    -->
 <!--------------------------------------------------------------------->
 
-<script src="/scripts/edit_profile.js"></script>
+<script src="/scripts/edit_streming.js"></script>
 </body>
-
 </html>
