--- a/edit_profile.html
+++ b/edit_profile.html
@@ -8,55 +8,112 @@
     <title>Document</title>
 </head>
 
-<div class="container" style = "color:whitesmoke">
+<div class="container" style="color:whitesmoke">
     <div class="row">
-      <div class="col-sm">
-        <h5 class="mb-0">Edit Profile</h5>
-<body style="background-color: #333333;"></body>
-<div class="container">
-    <label> User Name </label>
-    <input id="userName" type="text">
-    <br>
-    <label> About me </label>
-    <input id="aboutMe" type="text">
-    <br>
-    <label> Country </label>
-    <input id="country" type="text">
-    <br>
-    <label> City </label>
-    <input id="city" type="text">
-    <br>
-    <br>
-    <button type="button" id="save" class="btn btn-outline-success">Save</button>
-</div>
-<!----------------------------------------------->
-<!-- JS: Boostrap, Firebase, API related    -->
-<!----------------------------------------------->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
-    </script>
+        <div class="col-sm">
+            <h5 class="mb-0">Edit Profile</h5>
 
-<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+            <body style="background-color: #333333;"></body>
+            <div class="container">
+                <label> User Name </label>
+                <input id="userName" type="text">
+                <br>
+                <label> About me </label>
+                <input id="aboutMe" type="text">
+                <br>
+                <label> Country </label>
+                <input id="country" type="text">
+                <br>
+                <label> City </label>
+                <input id="city" type="text">
+                <br>
+                <br>
+                <button type="button" id="save" class="btn btn-outline-success">Save</button>
+                <br>
+            </div>
+            <div class="container">
+                <h5 class="mb-0">Edit Streaming Service</h5>
+                <input id="amazon" type="checkbox">
+                <label class="form-check-label"> Amazon Prime </label>
+                <br>
+                <input id="netflix" type="checkbox">
+                <label class="form-check-label"> Netflix </label>
+                <br>
+                <input id="disney" type="checkbox">
+                <label class="form-check-label"> Disney+ </label>
+                <br>
+                <input id="hulu" type="checkbox">
+                <label class="form-check-label"> Hulu </label>
+                <br>
+                <br>
+                <button type="button" id="save" class="btn btn-outline-success">Save</button>
+                <br>
+            </div>
+            <div class="container">
+                <h5 class="mb-0">Edit Favorite Genre</h5>
+                <input id="anime" type="checkbox">
+                <label class="form-check-label"> Anime </label>
+                <br>
+                <input id="action" type="checkbox">
+                <label class="form-check-label"> Action </label>
+                <br>
+                <input id="comedy" type="checkbox">
+                <label class="form-check-label"> Comedy </label>
+                <br>
+                <input id="drama" type="checkbox">
+                <label class="form-check-label"> Drama </label>
+                <br>
+                <input id="documentary" type="checkbox">
+                <label class="form-check-label"> Documentary </label>
+                <br>
+                <input id="horror" type="checkbox">
+                <label class="form-check-label"> Horror </label>
+                <br>
+                <input id="mystery" type="checkbox">
+                <label class="form-check-label"> Mystery </label>
+                <br>
+                <input id="romance" type="checkbox">
+                <label class="form-check-label"> Romance </label>
+                <br>
+                <input id="scienceFiction" type="checkbox">
+                <label class="form-check-label"> Science Fiction </label>
+                <br>
+                <br>
+                <button type="button" id="save" class="btn btn-outline-success">Save</button>
+                <br>
+            </div>
+        </div>
+    </div> 
+</div>   
+            <!----------------------------------------------->
+            <!-- JS: Boostrap, Firebase, API related    -->
+            <!----------------------------------------------->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+                crossorigin="anonymous">
+                </script>
 
-<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+            <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
-<!-- Add Firebase products that you want to use -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+            <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+            <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+            <!-- Add Firebase products that you want to use -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
 
 
-<!-- Link to the api keys for your firebase project -->
-<script src="scripts/firebase_api_kaz.js"></script>
+            <!-- Link to the api keys for your firebase project -->
+            <script src="scripts/firebase_api_kaz.js"></script>
 
-<!--------------------------------------------------------------------->
-<!-- JS files: Your own JavaScript functions included here    -->
-<!--------------------------------------------------------------------->
+            <!--------------------------------------------------------------------->
+            <!-- JS files: Your own JavaScript functions included here    -->
+            <!--------------------------------------------------------------------->
 
-<script src="/scripts/edit_profile.js"></script>
-</body>
+            <script src="/scripts/edit_profile.js"></script>
+            </body>
 
 </html>
