--- a/main.html
+++ b/main.html
@@ -41,19 +41,21 @@
             text-align: center;
             border: 1px solid black;
             padding-top: 10px;
+            padding-bottom: 10px;
             background-color: #333;
             color: white;
         }
 
         #body_container img {
             margin-top: 10px;
+            margin-bottom: 10px;
         }
 
 
        #startButton {
-           background-color: #333;
+           background-color: black;
            color: gold;
-           margin-top: 10%;
+           margin-top: 4%;
        }
 
         .container {
@@ -62,6 +64,7 @@
         
         body {
           background-color: #333;
+          /* font-family: Garamond, serif; */
         }
 
         .card {
@@ -139,7 +142,7 @@
           <div class="card">
             <img src="https://firebasestorage.googleapis.com/v0/b/cineder-3be64.appspot.com/o/cineder_logos%2FCINEDERLOGO_gold.png?alt=media&token=0922423b-3168-4f55-bfb8-a89afad027fe" class="card-img-top" id="displayed-movie-image" alt="...">
             <div class="card-body">
-              <h3 id="displayed-movie-small">Welcome to Cineder</h3>
+              <h3 id="displayed-movie-small">Welcome to Cinéder</h3>
               <button class="btn btn-warning" id="startButton" onclick="startSwipe()">Looks like you need a group!</button>
               <h4 id="displayed-director"></h4>
               <h4 id="displayed-year"></h4>
